test/spec_vectors/elem/ok/module_27.wat
(module (func) (table 1 funcref) (elem (i32.const 0) (ref func) (ref.func 0)))