test/spec_vectors/elem/fail/module_68.wat
(module (table 1 funcref) (elem (offset (i32.const 0) (nop))))